--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 author_profile: true
-excerpt: "Just another dev blog."
 header:
-  overlay_color: "#333"
+  overlay_image: https://chadramsey.github.io/assets/images/2018/code_snip_long.png
+  overlay_filter: 0.5
 ---
