Adding header image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 author_profile: true
 header:
-  overlay_image: https://chadramsey.github.io/assets/images/code_snip_long.png
+  overlay_image: /assets/images/code_snip_long.png
   overlay_filter: 0.5
 ---
